[gd_scene load_steps=2 format=3 uid="uid://interactionui123"]

[ext_resource type="Script" path="res://scripts/interaction_ui.gd" id="1_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_retro_panel"]
bg_color = Color(0.878, 0.835, 0.627, 1.0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.36, 0.25, 0.2, 1.0)
corner_detail = 1
anti_aliasing = false

[node name="InteractionUI" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ui")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_retro_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -15.0
offset_right = 130.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="KeyLabel" type="Label" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.36, 0.25, 0.2, 1.0)
theme_override_font_sizes/font_size = 20
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PromptLabel" type="Label" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.36, 0.25, 0.2, 1.0)
theme_override_font_sizes/font_size = 16
text = "to interact"
horizontal_alignment = 1
vertical_alignment = 1
